réalisation partie recherche et filtres

--- a/index.html
+++ b/index.html
@@ -33,6 +33,39 @@
                     </nav>
             </header>
 
+            <section id="recherche-filtre">
+                <div id="intro">
+                    <h1>Trouver votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre ville ou en pleine nature</p>
+                </div>
+                <div id="recherche">
+                    <i id="map" class="fas fa-map-marker-alt"></i>
+                    <input type="text" id="search" name="search">
+                    <button id="search-button">Rechercher</button>
+                </div>
+                <div id="filtres">
+                    <div class="filtre-titre">
+                       <span>Filtres</span>
+                    </div>
+                    <div class="filtre">
+                        <i id="icon-filtre1" class="fas fa-money-bill-wave"></i><span>Économique</span>
+                    </div> 
+                    <div class="filtre">
+                        <i id="icon-filtre2" class="fas fa-child"></i><span>Familial</span>
+                    </div> 
+                    <div class="filtre">
+                        <i id="icon-filtre3" class="fas fa-heart"></i><span>Romantique</span>
+                    </div>
+                    <div class="filtre">
+                        <i id="icon-filtre4" class="fas fa-dog"></i><span>Animaux autorisés</span>
+                    </div>
+                </div>
+                <div id="info">
+                    <i id="icon-info" class="fas fa-info"></i><span>Plus de 500 logements sont disponible dans cette ville</span>
+                </div>
+                
+            </section>
+
             <footer id="footer">
                     <div class="propos">
                         <h3>A propos</h3>
