réalisation des parties hébergement et activité

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <img  class="logo" src="images/logo/Reservia.svg" alt="logo reservia" />
                 <nav class="nav-header">
                     <ul>
-                        <li><a href="#hébergements">Hébergements</a></li>
-                        <li><a href="#activité">Activité</a></li>
+                        <li><a href="#hebergements">Hébergements</a></li>
+                        <li><a href="#activites">Activités</a></li>
                         <li><a class="subscribe" href="#">S'inscrire</a></li>
                     </ul>
                 </nav>
@@ -61,7 +61,158 @@
                 <div class="info">
                     <i class="fas fa-info"></i><span>Plus de 500 logements sont disponible dans cette ville</span>
                 </div>
-                
+            </section>
+            <section id="hebergements">                    
+                <div class="liste-hebergement">
+                    <h2>Hébergements à Marseille</h2>
+                    <article class="choix">
+                        <a href="#"><img class="img-choix" src="images/hebergements/medium/auberge-cannebiere.jpg" alt="auberge la cannebière" /> </a>
+                        <h4>Auberge la Cannebière</h4>
+                        <p>Nuit à partir de 25€</p>
+                        <div class="etoiles">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span class="gris"><i class="fas fa-star"></i></span>
+                        </div>
+                    </article>
+                    <article class="choix">
+                        <a href="#"><img class="img-choix" src="images/hebergements/medium/hotel-port.jpg" alt="hôtel du port" /> </a>
+                        <h4>Hôtel du port</h4>
+                        <p>Nuit à partir de 52€</p>
+                        <div class="etoiles">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+                    <article class="choix">
+                        <a href="#"><img class="img-choix" src="images/hebergements/medium/hotel-mouettes.jpg" alt="hôtel les mouettes" /> </a>
+                        <h4>Hôtel le mouettes</h4>
+                        <p>Nuit à partir de 76€</p>
+                        <div class="etoiles">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span class="gris"><i class="fas fa-star"></i></span>
+                        </div>
+                    </article>
+                    <article class="choix">
+                        <a href="#"><img class="img-choix" src="images/hebergements/medium/hotel-mer.jpg" alt="hôtel de la mer" /> </a>
+                        <h4>Hôtel de la mer</h4>
+                        <p>Nuit à partir de 46€</p>
+                        <div class="etoiles">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span class="gris"><i class="fas fa-star"></i></span>
+                            <span class="gris"><i class="fas fa-star"></i></span>
+                        </div>
+                    </article>
+                    <article class="choix">
+                        <a href="#"><img class="img-choix" src="images/hebergements/medium/auberge-panier.jpg" alt="auberge le panier" /> </a>
+                        <h4>Auberge le Panier</h4>
+                        <p>Nuit à partir de 23€</p>
+                        <div class="etoiles">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span class="gris"><i class="fas fa-star"></i></span>
+                        </div>
+                    </article>
+                    <article class="choix">
+                        <a href="#"><img class="img-choix" src="images/hebergements/medium/hotel-amina.jpg" alt="hôtel chez amina" /> </a>
+                        <h4>Hôtel chez Amina</h4>
+                        <p>Nuit à partir de 96€</p>
+                        <div class="etoiles">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+                    <span class="plus">Afficher plus</span>
+                </div>
+                <div class="populaires">
+                    <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
+                    <article class="pop">
+                        <a href="#"><img class="img-pop" src="images/hebergements/medium/hotel-soleil.jpg" alt="hôtel le soleil du matin" /> </a>
+                        <div>
+                            <h4>Hôtel le soleil du matin</h4>
+                            <p>Nuit à partir de 128€</p>
+                            <div class="etoiles">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="pop">
+                        <a href="#"><img class="img-pop" src="images/hebergements/medium/chambre-hotes.jpg" alt="Au cœur de l'eau chambre d'hôte" /> </a>
+                        <div>
+                            <h4>Au cœur de l'eau chambre d'hôte</h4>
+                            <p>Nuit à partir de 71€</p>
+                            <div class="etoiles">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span class="gris"><i class="fas fa-star"></i></span>                            
+                            </div>
+                        </div>
+                    </article>
+                    <article class="pop">
+                        <a href="#"><img class="img-pop" src="images/hebergements/medium/hotel-bleu.jpg" alt="hôtel tout bleu et blanc" /> </a>
+                        <div>
+                            <h4>Hôtel tout bleu et blanc</h4>
+                            <p>Nuit à partir de 68€</p>
+                            <div class="etoiles">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span class="gris"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </section>
+            <section id="activites">
+                <h2>Activités à Marseille</h2>
+                <div class="activite-card">
+                    <figure class="big">
+                        <a href="#"><img class="img-activite" src="images/activites/medium/vieux-port.jpg" alt="vieux port" /></a>
+                        <figcaption>Vieux Port</figcaption>
+                    </figure>
+                    <figure class="small">
+                        <a href="#"><img class="img-activite" src="images/activites/medium/fort.jpg" alt="fort de pomègues" /></a>
+                        <figcaption>Fort de Pomègues</figcaption>
+                    </figure>
+                    <figure class="small">
+                        <a href="#"><img class="img-activite" src="images/activites/medium/iles-frioul.jpg" alt="iles du frioul" /></a>
+                        <figcaption>Îles fu Frioul</figcaption>
+                    </figure>
+                    <figure class="big">
+                        <a href="#"><img class="img-activite" src="images/activites/medium/parc-national.jpg" alt="parc national des calanques" /></a>
+                        <figcaption>Parc National des Calanques</figcaption>
+                    </figure>
+                    <figure class="small">
+                        <a href="#"><img class="img-activite" src="images/activites/medium/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" /></a>
+                        <figcaption>Notre-Dame-de-la-Garde</figcaption>
+                    </figure>
+                    <figure class="small">
+                        <a href="#"><img class="img-activite" src="images/activites/medium/parc-longchamp.jpg" alt="parc Longchamp" /></a>
+                        <figcaption>Parc Longchamp</figcaption>
+                    </figure>
+                </div>
             </section>
         </div>
 
