--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
                 </div>
                 <div class="recherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input type="search" class="search" name="search">
-                    <button class="search-button">Rechercher</button>
+                    <input type="search" class="search" name="search" placeholder="Marseille, France">
+                    <button class="search-button">
+                        <span class="search-button-text">Rechercher</span>
+                        <i class="search-button-icon fas fa-search"></i>
+                    </button>
                 </div>
                 <div class="filtres">
                     <div class="filtre-titre">
