--- a/index.html
+++ b/index.html
@@ -270,23 +270,23 @@
                 <div  class="footer-liste">
                     <h3>A propos</h3>
                     <ul>
-                        <li>Fonctionnement du site</li>
-                        <li>Conditions générales de vente</li>
-                        <li>Données et confidentialité</li>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales de vente</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
                     </ul>
                 </div>
                 <div  class="footer-liste">
                     <h3>Nos hébergements</h3>
                     <ul>
-                        <li>Charte qualité</li>
-                        <li>soumettre votre hotel</li>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">soumettre votre hotel</a></li>
                     </ul>
                 </div>
                 <div  class="footer-liste">
                     <h3>Assistance</h3>
                     <ul>
-                        <li>Centre d'aide</li>
-                        <li>Nous contacter</li>
+                        <li><a href="#">Centre d'aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
                     </ul>
                 </div>
             </div>
