ajout de boutons sur les filtres de recherche

--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
                        <span>Filtres</span>
                     </div>
                     <div class="bloc-filtre">
-                        <div class="filtre">
+                        <button class="filtre">
                             <i class="fas fa-money-bill-wave"></i><span>Économique</span>
-                        </div> 
-                        <div class="filtre">
+                        </button> 
+                        <button class="filtre">
                             <i class="fas fa-child"></i><span>Familial</span>
-                        </div> 
-                        <div class="filtre">
+                        </button> 
+                        <button class="filtre">
                             <i class="fas fa-heart"></i><span>Romantique</span>
-                        </div>
-                        <div class="filtre">
+                        </button>
+                        <button class="filtre">
                             <i class="fas fa-dog"></i><span>Animaux autorisés</span>
-                        </div>
+                        </button>
                     </div>
                 </div>
                 <div class="info">
