correction de la semantique de la partie hébergement

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </section>
             <section id="hebergements">                    
-                <div class="liste-hebergement">
+                <main class="liste-hebergement">
                     <h2>Hébergements à Marseille</h2>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
@@ -169,8 +169,8 @@
                         </a>
                     </article>
                     <span class="plus">Afficher plus</span>
-                </div>
-                <div class="populaires">
+                </main>
+                <aside class="populaires">
                     <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
                     <article class="pop">
                         <a href="#" class="vignette-clic">
@@ -220,7 +220,7 @@
                             </div>
                         </a>
                     </article>
-                </div>
+                </aside>
             </section>
             <section id="activites">
                 <h2>Activités à Marseille</h2>
