--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <i class="fas fa-info"></i><span>Plus de 500 logements sont disponible dans cette ville</span>
                 </div>
             </section>
-            <section id="hebergements">                    
-                <main class="liste-hebergement">
+            <main id="hebergements">                    
+                <section class="liste-hebergement">
                     <h2>Hébergements à Marseille</h2>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
@@ -169,7 +169,7 @@
                         </a>
                     </article>
                     <span class="plus">Afficher plus</span>
-                </main>
+                </section>
                 <aside class="populaires">
                     <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
                     <article class="pop">
@@ -221,7 +221,7 @@
                         </a>
                     </article>
                 </aside>
-            </section>
+            </main>
             <section id="activites">
                 <h2>Activités à Marseille</h2>
                 <div class="activite-card">
@@ -237,30 +237,30 @@
                             <h4>Fort de Pomègues</h4>
                         </article>
                     </a>
-                        <a href="#" class="small vignette-clic">
-                            <article class="card">
-                                <img class="img-activite" src="images/activites/medium/iles-frioul.jpg" alt="iles du frioul" />
-                                <h4>Îles fu Frioul</h4>
-                            </article>
-                        </a>
-                        <a href="#" class="big vignette-clic">
-                            <article class="card">
-                                <img class="img-activite" src="images/activites/medium/parc-national.jpg" alt="parc national des calanques" />
-                                <h4>Parc National des Calanques</h4>
-                            </article>
-                        </a>
-                        <a href="#" class="small vignette-clic">
-                            <article class="card">
-                                <img class="img-activite" src="images/activites/medium/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" />
-                                <h4>Notre-Dame-de-la-Garde</h4>
-                            </article>
-                        </a>
-                        <a href="#" class="small vignette-clic">
-                            <article class="card">
-                                <img class="img-activite" src="images/activites/medium/parc-longchamp.jpg" alt="parc Longchamp" />
-                                <h4>Parc Longchamp</h4>
-                            </article>
-                        </a>
+                    <a href="#" class="small vignette-clic">
+                        <article class="card">
+                            <img class="img-activite" src="images/activites/medium/iles-frioul.jpg" alt="iles du frioul" />
+                            <h4>Îles fu Frioul</h4>
+                        </article>
+                    </a>
+                    <a href="#" class="big vignette-clic">
+                        <article class="card">
+                            <img class="img-activite" src="images/activites/medium/parc-national.jpg" alt="parc national des calanques" />
+                            <h4>Parc National des Calanques</h4>
+                        </article>
+                    </a>
+                    <a href="#" class="small vignette-clic">
+                        <article class="card">
+                            <img class="img-activite" src="images/activites/medium/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" />
+                            <h4>Notre-Dame-de-la-Garde</h4>
+                        </article>
+                    </a>
+                    <a href="#" class="small vignette-clic">
+                        <article class="card">
+                            <img class="img-activite" src="images/activites/medium/parc-longchamp.jpg" alt="parc Longchamp" />
+                            <h4>Parc Longchamp</h4>
+                        </article>
+                    </a>
                 </div>
             </section>
         </div>
