correction du double header pour le responsive en utilisant css grid

--- a/index.html
+++ b/index.html
@@ -22,29 +22,16 @@
 
     <body>
         <div class="container">
-            <header class="desktop">
+            <header>
                 <img  class="logo" src="images/logo/Reservia.svg" alt="logo reservia" />
                 <nav class="nav-header">
                     <ul>
                         <li><a href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
-                        <li><a class="subscribe" href="#">S'inscrire</a></li>
                     </ul>
                 </nav>
+                <a class="subscribe" href="#">S'inscrire</a>
             </header>
-            <header class="responsive-header">
-                <div class="responsive-header-top">
-                    <img  class="logo" src="images/logo/Reservia.svg" alt="logo reservia" />
-                    <a class="subscribe" href="#">S'inscrire</a>
-                </div>
-                <nav class="responsive-nav-header">
-                    <ul>
-                        <li><a href="#hebergements">Hébergements</a></li>
-                        <li><a href="#activites">Activités</a></li>   
-                    </ul>                 
-                </nav>
-            </header>
-
             <section class="recherche-filtre">
                 <div class="intro">
                     <h1>Trouver votre hébergement pour des vacances de rêve</h1>
