--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h2>Hébergements à Marseille</h2>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
-                            <img class="img-choix" src="images/hebergements/medium/auberge-cannebiere.jpg" alt="auberge la cannebière" /> 
+                            <img class="img-choix" src="images/hebergements/auberge-cannebiere.jpg" alt="auberge la cannebière" /> 
                             <h4>Auberge la Cannebière</h4>
                             <p>Nuit à partir de 25€</p>
                             <div class="etoiles">
@@ -87,7 +87,7 @@
                     </article>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
-                            <img class="img-choix" src="images/hebergements/medium/hotel-port.jpg" alt="hôtel du port" /> 
+                            <img class="img-choix" src="images/hebergements/hotel-port.jpg" alt="hôtel du port" /> 
                             <h4>Hôtel du port</h4>
                             <p>Nuit à partir de 52€</p>
                             <div class="etoiles">
@@ -101,7 +101,7 @@
                     </article>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
-                            <img class="img-choix" src="images/hebergements/medium/hotel-mouettes.jpg" alt="hôtel les mouettes" /> 
+                            <img class="img-choix" src="images/hebergements/hotel-mouettes.jpg" alt="hôtel les mouettes" /> 
                             <h4>Hôtel le mouettes</h4>
                             <p>Nuit à partir de 76€</p>
                             <div class="etoiles">
@@ -115,7 +115,7 @@
                     </article>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
-                            <img class="img-choix" src="images/hebergements/medium/hotel-mer.jpg" alt="hôtel de la mer" /> 
+                            <img class="img-choix" src="images/hebergements/hotel-mer.jpg" alt="hôtel de la mer" /> 
                             <h4>Hôtel de la mer</h4>
                             <p>Nuit à partir de 46€</p>
                             <div class="etoiles">
@@ -129,7 +129,7 @@
                     </article>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
-                            <img class="img-choix" src="images/hebergements/medium/auberge-panier.jpg" alt="auberge le panier" /> 
+                            <img class="img-choix" src="images/hebergements/auberge-panier.jpg" alt="auberge le panier" /> 
                             <h4>Auberge le Panier</h4>
                             <p>Nuit à partir de 23€</p>
                             <div class="etoiles">
@@ -143,7 +143,7 @@
                     </article>
                     <article class="choix">
                         <a href="#" class="vignette-clic">
-                            <img class="img-choix" src="images/hebergements/medium/hotel-amina.jpg" alt="hôtel chez amina" /> 
+                            <img class="img-choix" src="images/hebergements/hotel-amina.jpg" alt="hôtel chez amina" /> 
                             <h4>Hôtel chez Amina</h4>
                             <p>Nuit à partir de 96€</p>
                             <div class="etoiles">
@@ -161,7 +161,7 @@
                     <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
                     <article class="pop">
                         <a href="#" class="vignette-clic">
-                            <img class="img-pop" src="images/hebergements/medium/hotel-soleil.jpg" alt="hôtel le soleil du matin" /> 
+                            <img class="img-pop" src="images/hebergements/hotel-soleil.jpg" alt="hôtel le soleil du matin" /> 
                             <div>
                                 <h4>Hôtel le soleil du matin</h4>
                                 <p>Nuit à partir de 128€</p>
@@ -177,7 +177,7 @@
                     </article>
                     <article class="pop">
                         <a href="#" class="vignette-clic">
-                            <img class="img-pop" src="images/hebergements/medium/chambre-hotes.jpg" alt="Au cœur de l'eau chambre d'hôte" /> 
+                            <img class="img-pop" src="images/hebergements/chambre-hotes.jpg" alt="Au cœur de l'eau chambre d'hôte" /> 
                             <div>
                                 <h4>Au cœur de l'eau chambre d'hôte</h4>
                                 <p>Nuit à partir de 71€</p>
@@ -193,7 +193,7 @@
                     </article>
                     <article class="pop">
                         <a href="#" class="vignette-clic">
-                            <img class="img-pop" src="images/hebergements/medium/hotel-bleu.jpg" alt="hôtel tout bleu et blanc" /> 
+                            <img class="img-pop" src="images/hebergements/hotel-bleu.jpg" alt="hôtel tout bleu et blanc" /> 
                             <div>
                                 <h4>Hôtel tout bleu et blanc</h4>
                                 <p>Nuit à partir de 68€</p>
@@ -214,37 +214,37 @@
                 <div class="activite-card">
                     <a href="#" class="big vignette-clic">
                         <article class="card">
-                            <img class="img-activite" src="images/activites/medium/vieux-port.jpg" alt="vieux port" />
+                            <img class="img-activite" src="images/activites/vieux-port.jpg" alt="vieux port" />
                             <h4>Vieux Port</h4>
                         </article>
                     </a>
                     <a href="#" class="small vignette-clic">
                         <article class="card">
-                            <img class="img-activite" src="images/activites/medium/fort.jpg" alt="fort de pomègues" />
+                            <img class="img-activite" src="images/activites/fort.jpg" alt="fort de pomègues" />
                             <h4>Fort de Pomègues</h4>
                         </article>
                     </a>
                     <a href="#" class="small vignette-clic">
                         <article class="card">
-                            <img class="img-activite" src="images/activites/medium/iles-frioul.jpg" alt="iles du frioul" />
+                            <img class="img-activite" src="images/activites/iles-frioul.jpg" alt="iles du frioul" />
                             <h4>Îles fu Frioul</h4>
                         </article>
                     </a>
                     <a href="#" class="big vignette-clic">
                         <article class="card">
-                            <img class="img-activite" src="images/activites/medium/parc-national.jpg" alt="parc national des calanques" />
+                            <img class="img-activite" src="images/activites/parc-national.jpg" alt="parc national des calanques" />
                             <h4>Parc National des Calanques</h4>
                         </article>
                     </a>
                     <a href="#" class="small vignette-clic">
                         <article class="card">
-                            <img class="img-activite" src="images/activites/medium/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" />
+                            <img class="img-activite" src="images/activites/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" />
                             <h4>Notre-Dame-de-la-Garde</h4>
                         </article>
                     </a>
                     <a href="#" class="small vignette-clic">
                         <article class="card">
-                            <img class="img-activite" src="images/activites/medium/parc-longchamp.jpg" alt="parc Longchamp" />
+                            <img class="img-activite" src="images/activites/parc-longchamp.jpg" alt="parc Longchamp" />
                             <h4>Parc Longchamp</h4>
                         </article>
                     </a>
